--- a/index.html
+++ b/index.html
@@ -9,6 +9,48 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>
+        Esercizio per casa
+    </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+            <div class="col1">
+                1 col
+            </div>
+        </div>
+    </div>
 </body>
 </html>
