first section of rows done

--- a/index.html
+++ b/index.html
@@ -14,41 +14,111 @@
     </h1>
     <div class="container">
         <div class="row">
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
             </div>
-            <div class="col1">
+            <div class="col-1">
                 1 col
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                col
+            </div>
+            <div class="col-5">
+                col
+            </div>
+            <div class="col-5">
+                col
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                12 col
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8">
+                col
+            </div>
+            <div class="col-2">
+                col
+            </div>
+            <div class="col-2">
+                col
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                col
+            </div>
+            <div class="col-2">
+                col
+            </div>
+            <div class="col-2">
+                col
+            </div>
+            <div class="col-6">
+                col
+            </div>
+            <div class="col-1">
+                col
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="row2">
+                    <div class="col-2">
+                        nested col 2
+                    </div>
+                    <div class="col-2">
+                        nested col 2
+                    </div>
+                    <div class="col-8">
+                        nested col 8
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row2">
+                    <div class="col-6">
+                    nested col 6
+                    </div>
+                    <div class="col-6">
+                    nested col 6
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
