second section done

--- a/index.html
+++ b/index.html
@@ -118,7 +118,62 @@
                     nested col 6
                     </div>
                 </div>
-                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12" id="separa"></div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <span>col 12</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <span>col1</span>
+            </div>
+            <div class="col-11">
+                <span>col11</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <span>col2</span>
+            </div>
+            <div class="col-10">
+                <span>col10</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <span>col3</span>
+            </div>
+            <div class="col-9">
+                <span>col9</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <span>col4</span>
+            </div>
+            <div class="col-8">
+                <span>col8</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-5">
+                <span>col5</span>
+            </div>
+            <div class="col-7">
+                <span>col7</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <span>col6</span>
+            </div>
+            <div class="col-6">
+                <span>col6</span>
             </div>
         </div>
     </div>
