--- a/index.html
+++ b/index.html
@@ -177,5 +177,65 @@
             </div>
         </div>
     </div>
+    <h1>
+        Offset
+    </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-1 col-offset-11">
+                <span>col</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2 col-offset-10">
+                <span>col</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3 col-offset-9">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 col-offset-8">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-5 col-offset-7">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 col-offset-6">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7 col-offset-5">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8 col-offset-4">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-9 col-offset-3">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-10 col-offset-2">
+                <span>tol</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-11 col-offset-1">
+                <span>tol</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
